# upf_to_json

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
tests/: Ac.us.z_11.ld1.psl.v1.0.0-high.upf  test_upf_to_json.py
upf_to_json/: __init__.py  upf1_to_json.py  upf2_to_json.py  upf_to_json.py
